{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 79,
  "lineage": "6bbbb6d5-a574-b07b-c512-81f31a258544",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b920463c8cb8e42e",
            "arn": "arn:aws:ec2:us-east-1:668681129824:instance/i-064d1104c89890d97",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "test",
            "id": "i-064d1104c89890d97",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00028333351168fb4",
            "private_dns": "ip-172-31-91-90.ec2.internal",
            "private_ip": "172.31.91.90",
            "public_dns": "ec2-54-161-199-44.compute-1.amazonaws.com",
            "public_ip": "54.161.199.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a451c7fc5101a256",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Test Security group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01cad10fee42e76d9",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0876d73ad0e42bbdc"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.test",
            "aws_iam_role.test_role",
            "aws_key_pair.myKey",
            "aws_security_group.mysg",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668681129824:security-group/sg-0876d73ad0e42bbdc",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0876d73ad0e42bbdc",
            "ingress": [],
            "name": "Test Security group",
            "name_prefix": "",
            "owner_id": "668681129824",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MySG"
            },
            "tags_all": {
              "Name": "MySG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0107bac019499126f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rule1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2520788012",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0876d73ad0e42bbdc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mysg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rule1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3130254755",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0876d73ad0e42bbdc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mysg"
          ]
        },
        {
          "index_key": "rule2",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-203012118",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0876d73ad0e42bbdc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mysg"
          ]
        }
      ]
    }
  ]
}